--- a/Stylesheets/superMario.css
+++ b/Stylesheets/superMario.css
@@ -5,7 +5,7 @@ body {
 
 
 h1 {
-  color: black;
+  color: white;
   text-align: center;
   font-family: Impact, fantasy;
   font-weight: 2000;
@@ -15,6 +15,7 @@ h1 {
 }
 
 h2 {
+  color: white;
   text-align: center;
   font-family: Impact, fantasy;
   margin: 40px ;
@@ -22,9 +23,9 @@ h2 {
 }
 
 p {
+  color: white;
   font-size: 20px;
-  font-weight: 400;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Impact, fantasy;
   display: table;
   margin: 80px 2px;
   text-align: center; 
@@ -48,10 +49,8 @@ img
 }
 
 .button {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Impact, fantasy;
     border: none;
-    border-radius: 2em;
-    background-color:gray;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -59,13 +58,14 @@ img
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-    
+    color:white;
+    background-color: transparent;
+    border:2px solid white;
   }
 
+
 a {
-  color:white;
+  color: white;
 }
-
-
 
   
